--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="GoldeRoX, GoldeRoX DEV, Gold dev, Gold, GoldeRoX Games, GoldeRoX GitHub">
+    <meta name="author" content="GoldeRoX Dev">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoldeRoX DEV</title>
     <link rel="Stylesheet" type="text/css" href="main.css">
 </head>
@@ -30,14 +32,15 @@
         <div id="presentation">
             <h1><pre>Student, Gamedev, Webdev.</pre></h1>
             <br><br><br>
-            <a href=""><button>Learn more.</button></a>
+            <!--Button with js script-->
+            <a class="section_1" href="#"><button>Learn more.</button></a>
 
         </div>
 
         <div id="information">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div>
-                <h1>Hi!</h1>
+                <h1><span class="section_2">Hi!</span></h1>
                 <p>My name is Christopher, I'm a <span id="y_old">20</span> year old computer enthusiast.<br>
                 I'm currently studying Computer Science in Wrocław, Poland. <br>
                 I have a Github profile, where I show my projects, code lines <br>
@@ -51,5 +54,6 @@
         
         <footer>&copy; <span id='footer'>2020</span> GoldeRoXDev</footer>
         <script src="scripts/date.js"></script>
+        <script src="scripts/scroll.js"></script>
 </body>
 </html>
